calico_versioned_docs/version-3.28/reference/installation/helm_customization.mdx
---
description: Helm installation reference
---

import variables from '@site/calico_versioned_docs/version-3.28/variables';

# Helm installation reference

You can customize the following resources and settings during {variables.prodname} Helm-based installation using the file, `values.yaml`.

- [Installation](api.mdx#operator.tigera.io/v1.InstallationSpec)
- [Default felix configuration](../resources/felixconfig.mdx#spec)

:::note
If you customize felix configuration when you install {variables.prodname}, the `v1 apiVersion` is used. However, when you apply
felix configuration customization after installation (when the tigera-apiserver is running), use the `v3 apiVersion`.
:::

### Sample values.yaml

Here is a sample `values.yaml` file with settings for custom resources. You must enable the custom resource using
`enabled: true` to provide custom configurations; custom resources set to false are ignored.

```yaml
installation:
  enabled: true
  <installation resource spec fields to configure>

defaultFelixConfiguration:
  enabled: false
  <if enabled is true: felixConfiguration resource spec fields to configure>
```

## Common customizations

Example of common customizations that you might want to configure in you values.yaml for your helm-based installation:

### Encryption using WireGuard
WireGuard encryption is configured in the FelixConfiguration. To set encryption for your cluster, update the `values.yaml` file.

```yaml
defaultFelixConfiguration:
  enabled: true
  wireguardEnabled: true
  wireguardEnabledV6: true
```