calico_versioned_docs/version-3.33/reference/installation/helm_customization.mdx
---
description: Helm chart values reference for installing Calico Open Source covering supported overrides and operator configuration knobs.
---

# Helm installation reference

You can customize the following resources and settings during $[prodname] Helm-based installation using the file, `values.yaml`.

- [Installation](api.mdx#installationspec)
- [Default felix configuration](../resources/felixconfig.mdx#spec)

:::note
If you customize Felix configuration when you install $[prodname], the `crd.projectcalico.org/v1` API group is used. However, when you apply
Felix configuration customization after installation (when the tigera-apiserver is running), use the `projectcalico.org/v3` API group.
When using [native v3 CRDs](../../operations/native-v3-crds.mdx), only the `projectcalico.org/v3` API group is installed and should always be used.
:::

### Sample values.yaml

Here is a sample `values.yaml` file with settings for custom resources. You must enable the custom resource using
`enabled: true` to provide custom configurations; custom resources set to false are ignored.

```yaml
installation:
  enabled: true
  <installation resource spec fields to configure>

defaultFelixConfiguration:
  enabled: false
  <if enabled is true: felixConfiguration resource spec fields to configure>
```

## Common customizations

Example of common customizations that you might want to configure in you values.yaml for your Helm-based installation:

### Encryption using WireGuard
WireGuard encryption is configured in the FelixConfiguration. To set encryption for your cluster, update the `values.yaml` file.

```yaml
defaultFelixConfiguration:
  enabled: true
  wireguardEnabled: true
  wireguardEnabledV6: true
```